[package]
name = "chibikvs"
version = "0.0.1"
authors = ["totechite <yusuke.kataoka09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.7.3"
uuid = { version = "0.8", features = [ "v4"] }

tokio = { version = "1", features = ["full"] }
bytes = "1"
mini-redis = "0.4"

b_plus_tree = { git = "https://github.com/totechite/b_plus_tree.git", rev = "f6212fa75549a09d1f3bc4beea2fa86c6db7db3d" }
